--- a/bildearkiv.html
+++ b/bildearkiv.html
@@ -75,7 +75,7 @@
     <div class="col col-lg-4">
       <h4 style="text-align: center">Om Meg</h4>
       <ul>
-        <li>Jan Kristian Eide</li><br />
+        <li>Jan kkKristian Eide</li><br />
         <li>VG2 Dataelektronikk ved Vinstra VS</li><br />
         <li>Otta</li><br />
         <li>jankristianeide@outlook.com</li>
