ordnet ltii på bilde arkiv
yeey

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Eide</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -31,6 +31,22 @@
     </div>
   </nav>
   <br /><br />
+  <div class="row">
+    <div class="col col-lg-1"></div>
+    <div class="col col-lg-4">
+      <h4 style="text-align: center">...</h4>
+      <p></p>
+    </div>
+    <div class="col col-lg-2">
+      <h4 style="text-align: center">...</h4>
+    </div>
+    <div class="col col-lg-4">
+      <h4 style="text-align: center">...</h4>
+      <p></p>
+    </div>
+    <div class="col col-lg-1"></div>
+  </div>
+  <br /><br /><br /><br />  <br /><br /><br />
   <div class="row">
     <div class="col col-lg-1"></div>
     <div class="col col-lg-4">
