--- a/bildearkiv.html
+++ b/bildearkiv.html
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Eide</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,13 +33,11 @@
   <br /><br />
   <div class="row">
     <div class="col col-lg-1"></div>
-    <div class="col col-lg-4">
-      <h4 style="text-align: center">Hallo</h4>
-      <p>Jeg er utplassert hos <strong>Abaris</strong>, og har fått lære litt om HTML programmering. Jeg brukte først CodeCadamy, å prøver nå på egenhånd. Nå bruker jeg et programm som heter <strong>Atom</strong></p>
-      <br />
-    </div>
     <div class="col col-lg-2">
-      <h4 style="text-align: center">Bilder</h4>
+
+    </div>
+    <div class="col col-lg-6">
+      <h4 style="text-align: center">Bilde Arkiv</h4>
 
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -47,19 +45,31 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/bjorn.jpg" alt="First slide">
+            <img class="d-block w-100" src="img/skog.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/speil.jpg" alt="Second slide">
+            <img class="d-block w-100" src="img/sand.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/tarn.jpg" alt="Third slide">
+            <img class="d-block w-100" src="img/space.jpg" alt="Third slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/data.jpg" alt="Fourth slide">
+            <img class="d-block w-100" src="img/spokelse.jpg" alt="Fourth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/lol.jpg" alt="Fifth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/skyskraper.jpg" alt="Sixth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/tetris.jpg" alt="Seventh slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -72,14 +82,8 @@
         </a>
       </div>
     </div>
-    <div class="col col-lg-4">
-      <h4 style="text-align: center">Om Meg</h4>
-      <ul>
-        <li>Jan kkKristian Eide</li><br />
-        <li>VG2 Dataelektronikk ved Vinstra VS</li><br />
-        <li>Otta</li><br />
-        <li>jankristianeide@outlook.com</li>
-      </ul>
+    <div class="col col-lg-2">
+
     </div>
     <div class="col col-lg-1"></div>
   </div>
@@ -89,5 +93,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
-
 </html>
